--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,11 +1,3 @@
-.container {
-  margin-top: 3rem;
-}
-
-.mb-4 {
-  margin-bottom: 1.5rem;
-}
-
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -18,20 +10,19 @@
   max-width: 33.33333%;
 }
 
-.mb-4 {
-  margin-bottom: 1.5rem;
-}
-
 .card-theme {
-  border: 1px solid #ddd;
+  border: none;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 8px rgb(79, 76, 76);
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  overflow: hidden;
   transition: transform 0.3s ease-in-out;
 }
 
 .card-theme .card-body {
   padding: 1.25rem;
-  background-color: #111;
+  background-color: rgba(17, 17, 17, 0.8);
   color: white;
 }
 
